[package]
name = "cryptgeon"
version = "1.0.0"
authors = ["cupcakearmy <hi@nicco.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-files = "0.5"
serde = "1"
serde_json = "1"
lazy_static = "1"
ring = "0.16"
bs62 = "0.1"
memcache = "0.15"